--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -276,6 +276,14 @@ E Send coins that never belonged to him
 31.迄今为止，因（）领域成果获得图灵奖的人数是最多的。
 >A 密码学  B 人工智能  C 计算复杂性理论   D程序设计语言与编译器  
 
+32.下列哪个工具可对目标进行端口检测？  
+>A. sqlmap  B.nmap  C.wireshark  D.Github  
+
+33.实验一中，利用wireshark提取出来的数据，在某一个TCP流中显示cat flag命令的结果为：ZmxhZ3tyZXZlcnNlX3NoZWwxbDFsbGwxbH0KCg==，请问该编码方式是？  
+>A. Unicode B.Hash C. Sha1 D.Base64  
+
+34.在实验三中，我们利用了以下哪个工具对程序进行逆向分析？  
+>A.Nmap  B.AWVS  C.Ida  D.Burp Suite  
 
 
 #### 判断对错  
@@ -362,7 +370,9 @@ E Send coins that never belonged to him
 80.社会工程是指为非法获得信息采取的技术手段。×  
 81.信息系统并不是越安全就越好。√  
 82.模糊测试属于白盒测试。×  
-83.如程序是部分正确且是终止的，则其为正确的。  
+83.如程序是部分正确且是终止的，则其为正确的。√  
+84.在随机数种子是一致的情况下，window和linux生成的随机数是相同的。 X   
+85.我们可以利用wireshark完成对ICMP数据包的监听。√  
 
 
 
@@ -445,6 +455,31 @@ int main() {
 }  
 
 9.解释以下栈计算机指令的完成的功能。………………  
+10.分析以下代码，回答如何逆向得到input中的数据，不要求写出代码，写出完整思路即可。  
+
+```c  
+signed __int64 check()  
+{  
+  int v1; // [rsp+8h] [rbp-8h]  
+  int i; // [rsp+Ch] [rbp-4h]  
+  int j; // [rsp+Ch] [rbp-4h]  
+  int k; // [rsp+Ch] [rbp-4h]  
+
+  srand(0xDEADBEEF);  
+  v1 = strlen(input);  
+  for ( i = 0; i < v1; ++i )  
+    input[i] += (char)random() % 64;  
+  for ( j = 0; j < v1; ++j )  
+    input[j] ^= random();  
+  for ( k = 0; k < v1; ++k )  
+  {  
+    if ( input[k] != marg_num[k] )  
+      return 0LL;  
+  }  
+  return 1LL;  
+}  
+```  
+要点：随机数生成，逆向的顺序，异或。  
 
 #### 证明  
 1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
