--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -63,8 +63,8 @@
 【模糊测试】通过向程序输入非预期的数据，并监控其输出或状态的异常，来发现程序中故障的方法。  
 【程序的正确性】
 【程序的部分正确性】
-
-
+【符号执行】程序分析的一种方法。使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
+【动态符号执行】以具体的数值作为输入执行程序代码，在程序实际执行路径的基础上，用符号执行技术进行分析，提取路径的约束表达式，根据路径搜索策略（深度、广度）对约束表达式进行变形，求解变形后的表达式并生成新的测试用例，不断迭代上面的过程，直到完成遍历程序的所有执行路径。  
 
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
@@ -504,9 +504,9 @@ signed __int64 check()
 在这一证明过程中提出了著名的（图灵机）模型。  
 2.斯蒂芬·库克因其提出的Cook定理奠定了NP完全理论的基础，获得1982年图灵奖。他的这项工作受到了他导师（王浩）所做机器定理证明中的谓词演算可满足性问题的启发，提出了布尔可满足性问题是NP完备的证明即Cook定理。  
 3.用于BTC共识的（PoW工作量证明）思想最早由（Cynthia Dwork）和（Moni Naor）于1993年的学术论文提出。  
-2.进行风险评估时，主要考虑安全事件发生的（可能性）和（影响程度）  
-3.将风险划分成级别的风险评估方法为（定性）风险评估  
-4.给出货币价值的风险评估方法为（定量）风险评估  
+4.进行风险评估时，主要考虑安全事件发生的（可能性）和（影响程度）  
+5.将风险划分成级别的风险评估方法为（定性）风险评估  
+6.给出货币价值的风险评估方法为（定量）风险评估  
     
     
 #### 第一次课堂报告各小组提供的小题(编号代表提供的小组序号)      
