--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -164,16 +164,28 @@
 11.【抽象语法树AST】对PL语法结构进行抽象，作为程序的【中间表示】，可用于程序优化、分析及转换等。  
 12.以我们学校的选课系统为例，风险是这样产生的，首先选课系统中保存着教学相关的重要信息，是具有价值的。有多大的价值呢？如果选课系统是请软件公司开发的，支付了100元钱，那么系统的价值【 B  】(A.相当于100元钱、B.远高于100元钱)。可能对系统产生潜在破坏的这些因素，例如病毒、网络攻击，叫做【 威胁  】，产生这些因素的主体，叫做XX主体。系统的弱点，例如没有打补丁、存在弱口令，叫做【 脆弱性  】。这三者结合起来，就构成了风险,风险涉及的安全事件就包括个人信息泄露、选课活动被破坏。  
 13.在密码学中，需要加密的消息叫做【 明文 】，隐藏内容的过程叫做加密，被加密后的消息叫做密文。  
+13+.在密码学中，需要加密的消息叫做明文，隐藏内容的过程叫做加密，被加密后的消息叫做【密文】。  
 14.访问控制中，对客体或客体中所含资源请求访问的主动实体称为【 主体 】。  
 15.【 口令  】机制是身份鉴别中最常用的机制。  
 16.Kerberos是一种基于【 对称 】密码的鉴别机制。  
 17.任何访问控制策略最终均可被模型化为访问控制【 矩阵 】形式。  
 18.Bell-Lapadula模型是一种机密性模型，Biba模型是一种【 完整 】性模型。  
+18+.Bell-Lapadula模型是一种【机密】性模型，Biba模型是一种完整性模型。  
 19.访问控制列表机制（ACL）最适合于有相对【 少 】的需要被区分的用户，并且这些用户中的绝大多数是稳定的情况。如果访问控制列表太大或经常改变，维护访问控制列表会成为最主要的问题。  
 20.缓冲区溢出攻击的主要原因是C语言本身缺乏【 边界完整性 】检查。  
 21.【  特洛伊木马  】是一种隐藏在具有一定使用功能的程序（称为载体程序或外壳程序）中的一段非法的代码。  
 22.一次性口令确保每次的鉴别口令在使用后作废，可以应对【重放】攻击。  
-
+23.A weakness of an asset or group of assets which can be exploited by one or more threats指的是【脆弱性】。  
+24.函数f(n):N→R称为关于n的任意多项式无界的，如果对任意多项式p(n),存在一个自然数n0，使得对于任意n＞n0，都有【f(n)＞p(n)】。  
+24+.函数f(n):N→R称为关于n的【任意多项式】无界的，如果对任意多项式p(n),存在一个自然数n0，使得对于任意n＞n0，都有f(n)＞p(n)。  
+25.通过用户提交的附加信息，对主体身份进行证实的过程，称之为【身份鉴别】。  
+25+.通过用户提交的【附加信息】，对主体身份进行证实的过程，称之为身份鉴别。  
+26.【形式化方法】是指，在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。它是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
+26+.形式化方法是指，在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于【数学】的定义、开发、验证。它是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
+26++.形式化方法是指，在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。它是【理论计算机科学】的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
+27.【符号执行】是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
+27+.符号执行是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的【路径约束】。通过对其进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
+同一主体在不同信息交换过程中所用身份的互相不可关联性。
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
@@ -284,6 +296,18 @@ E Send coins that never belonged to him
 
 34.在实验三中，我们利用了以下哪个工具对程序进行逆向分析？  
 >A.Nmap  B.AWVS  C.Ida  D.Burp Suite  
+
+35.非确定性图灵机在多项式时间可解的问题（也是确定性图灵机多项式时间可验证的问题）称之为：（    ）。  
+>A P问题  B NP问题  C NPC问题  D NP-Hard问题  
+
+36.确定性图灵机在多项式时间可解的问题称之为：（    ）。  
+>A P问题  B NP问题  C NPC问题  D NP-Hard问题  
+
+37.若问题π∈NP，且对∀π’∈NP，都有π’∝π,则π为：（    ）。  
+>A P问题  B NP问题  C NPC问题  D NP-Hard问题  
+
+38.以下哪个语言是非图灵完备的？（     ）  
+>A λ验算  B C语言  C 正则语言  D Javascript  
 
 
 #### 判断对错  
