--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -553,6 +553,18 @@ B.关联性是CS97签名方案的安全性要求之一。
 C.CS97签名方案以离散对数和RSA算法为基础。     
 D.CS97签名方案的签名长度依赖于群成员个数。     
     
+【09】下列哪种分析方法可以**快速**探索到程序的所有分支(B)   
+A.模糊测试     
+B.动态符号执行     
+C.静态分析      
+D.人工审计      
+     
+【10】.以下关于差分隐私的说法，错误的是(D)    
+A.差分隐私分为中心化差分隐私和本地化差分隐私。    
+B.拉普拉斯算法(Laplace algorithm)是最典型的中心化差分隐私算法。    
+C.差分隐私的主要方法是扰动和采样    
+D.随机响应算法(Randomized Response)是最典型的中心化差分隐私算法   
+     
 【11】下面crytbb加密数据不可能用什么方式?（C）    
 A 完全同态加密 B 对称加密   C md5  D 都不可以     
     
@@ -585,6 +597,18 @@ B. 指数机制适合保护数值型的数据。
 C. 攻击者利用差分攻击的前提是需要有足够的背景知识。     
 D. 差分隐私项目RAPPOR是由Apple实现并且维护的。     
        
+【09】下列哪个方面应用了**全同态**加密算法(A)    
+A.数字水印     
+B.解决鸡兔同笼    
+C.远程通信  
+D.共享密钥    
+      
+【10】电子选举过程中用到的加密方式有(A)     
+A.同态加密    
+B，一次一密     
+C.MD5加密    
+D.Base64加密方式     
+      
 【11】公平掷币协议是谁提出的？(B)     
 A：Adleman   B: Blum   C: Shamir     D:Diffie           
       
@@ -616,7 +640,94 @@ f(x)=[65(x-3)(x-5)+36(x-2)(x-5)+96(x-2)(x-3)]mod19
 恢复K=f(0)=11       
           
 ### 第三次课堂报告各小组提供的小题(编号代表提供的小组序号)                  
-
+   
+【13】分组密码的工作模式有什么作用？    
+答案：分组密码的工作模式主要用来进行加密和认证。     
+       
 ### 第四次课堂报告各小组提供的小题(编号代表提供的小组序号)     
 
 ### 实验课相关的题目  
+     
+### Others(课上同学介绍)    
+       
+(1).question:在没有栈保护的情况下，下面代码有什么漏洞，漏洞点在哪里，如何触发？   
+#include "stdio.h"    
+int main(int argc, char const *argv[])    
+{    
+    char str[10];
+    printf("Please input a string:");
+    gets(str);
+    printf("%s\n", str);
+    return 0;    
+}     
+    
+(2)缓冲区溢出(读如下程序)：    
+#include <stdio.h>    
+int foo(const char* input)    
+{     
+     char buf[8];
+     int flagA = 0;
+     int flagB = 1;
+     memset(buf, 0, 24);
+     strcopy(buf, input);
+     if(flagA == 1 && flagB == 0)
+          printf("Pwn!!!!");
+     else
+          printf("%s", buf);
+  }      
+int main()     
+{   
+ char input[] = "";   
+      foo(input);
+      return 0;    
+  }
+      
+假设以上代码将在32位的机器上编译运行，foo函数的栈结构如下：      
+---------     
+| ... |     
+---------      
+| ret |            
+---------    
+|oldEBP|      
+---------<-EBP      
+| flagB |      
+---------     
+| flagA |           
+---------      
+| buf |         
+---------     
+| buf |           
+--------- <-ESP     
+| ... |            
+---------      
+      
+(a).存在漏洞的代码在第( C )行     
+A. 02    
+B. 05     
+C. 06     
+D. 07     
+      
+(b).若要使该程序输出"Pwn!!!!"，则第14行的input字符数组的值应该是(A)     
+A. AAAAAAAA\x01\x00\x00\x00\x00\x00\x00\x00      
+B. AAAAAAAA\x01\x00\x00\x00      
+C. \x01\x00\x00\x00\x00\x00\x00\x00AAAAAAAA      
+D. \x01\x00\x00\x00AAAAAAAA      
+       
+解析：    
+ 1. strcopy函数发生了缓冲区溢出，当input的长度大于buf的长度时，多出来的数据会覆盖掉其他的局部变量。     
+ 2. 若要使程序输出"Pwn!!!!"，则需要flagA为1并且flagB为0，而最开始flagA为0，flagB为1，   
+ 因此就需要利用缓冲区溢出来修改flagA与flagB，根据题目给出的栈结构图，首先需要8个A填充buf，    
+ 由于此程序编译运行在32位系统上，则之后需要4个字节修改flagA，再需要4个字节修改flagB，因此选A。      
+     
+       
+(3).unlink技术是堆攻击的一种，其实现原理是：     
+FD = p->fd     
+BK = p->bk     
+FD->bk = BK     
+BK->fd = FD       
+在64位的linux系统中，要使用ulink攻击使得__malloc_hook地址写成one_gadget的地址，下面可以实现的是(A)       
+p->fd = &__malloc_hook - 0x18, p->bk = &one_gadget     
+p->fd = &__malloc_hook - 0x10, p->bk = &one_gadget - 0x10      
+p->fd = &__malloc_hook - 0x18, p->bk = &one_gadget - 0x10     
+p->fd = &__malloc_hook, p->bk = &one_gadget      
+     
