--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -731,3 +731,32 @@ p->fd = &__malloc_hook - 0x10, p->bk = &one_gadget - 0x10
 p->fd = &__malloc_hook - 0x18, p->bk = &one_gadget - 0x10     
 p->fd = &__malloc_hook, p->bk = &one_gadget      
      
+(4).ROP、ret2libc      
+     
+Q:某程序运行到某函数时函数调用栈如图一所示，图二为可执行文件的部分函数调用地址，已知程序在读取用户输入到变量 *str* 时存在栈溢出。          
+请根据题目所给信息构造输入字符串，获取**地址** 0x080485D0 处的字符串，并简略说明原理。(程序为32位可执行文件，**小端**存储)         
+      
+```     
+	      		stack
+esp	 --> |0x08048515|										
+	 --> |0x0 		|					
+	 --> |0xf7e1a637| <-- char * str
+         --> |0x1 		|						 		部分函数的调用地址
+ebp	 --> |0x0 		|						printf@plt				0x08048370
+	 --> |0xf7e30830|						gets@plt				0x08048380
+	 --> |0x0804859b|						__stack_chk_fail@plt	0x08048390
+	 --> |0x1 		|						puts@plt				0x080483A0	
+     --> |0xf7e30828|
+	 		图一												图二
+```
+      
+       
+         
+A:可以调用printf()函数或者puts()函数来输出0x080485D0 处的字符串，以puts()为例。根据栈的分布，          
+[ebp+8]处为该函数的返回地址，变量str到返回地址的偏移为16。要调用puts(0x080485D0)，需要将返回地址覆盖为puts@plt,           
+返回地址+8处覆盖为puts()的参数 0x080485D0，最后构造的输入字符串如下:        
+       
+str = "aaaaaaaaaaaaaaaa\xA0\x83\x04\x08aaaa\xD0\x85\x04\x08"           
+      
+      
+      
