--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -183,6 +183,7 @@
 26.【形式化方法】是指，在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。它是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
 26+.形式化方法是指，在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于【数学】的定义、开发、验证。它是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
 26++.形式化方法是指，在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。它是【理论计算机科学】的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
+26+++.形式化方法是指，在【计算机科学】领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。它是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
 27.【符号执行】是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 27+.符号执行是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的【路径约束】。通过对其进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 同一主体在不同信息交换过程中所用身份的互相不可关联性。
