--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -160,7 +160,7 @@
 7.已知定理“条件熵链式法则”为：H（X,Y）=H(Y)+H(X|Y)。其贝叶斯表述为：H（Y|X）=【  H（Y)+H(X|Y)-H（X） 】  
 8.BTC所使用的树形Hash数据结构称之为【Merkle】树。  
 9.如果能把所有的交易信息（账目），组织成为一个不可篡改的链表，就形成了自带对账功能的数字记账技术：【区块链】  
-10.一个访问控制矩阵，如果按列存储，那么就是【ACL】；而按行存储，就是【Capabilities】  
+10.一个访问控制矩阵，如果按列存储，那么就是【ACL/或访问控制列表】；而按行存储，就是【Capabilities/或能力】  
 11.【抽象语法树AST】对PL语法结构进行抽象，作为程序的【中间表示】，可用于程序优化、分析及转换等。  
 12.以我们学校的选课系统为例，风险是这样产生的，首先选课系统中保存着教学相关的重要信息，是具有价值的。有多大的价值呢？如果选课系统是请软件公司开发的，支付了100元钱，那么系统的价值【 B  】(A.相当于100元钱、B.远高于100元钱)。可能对系统产生潜在破坏的这些因素，例如病毒、网络攻击，叫做【 威胁  】，产生这些因素的主体，叫做XX主体。系统的弱点，例如没有打补丁、存在弱口令，叫做【 脆弱性  】。这三者结合起来，就构成了风险,风险涉及的安全事件就包括个人信息泄露、选课活动被破坏。  
 13.在密码学中，需要加密的消息叫做【 明文 】，隐藏内容的过程叫做加密，被加密后的消息叫做密文。  
@@ -186,7 +186,12 @@
 26+++.形式化方法是指，在【计算机科学】领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。它是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
 27.【符号执行】是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 27+.符号执行是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的【路径约束】。通过对其进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
-同一主体在不同信息交换过程中所用身份的互相不可关联性。
+28.匿名性是指同一主体在不同信息交换过程中所用身份的【互相不可关联性】。  
+29.任何可以减少不确定性的事物均为【信息】。  
+30.潜信道包括空间潜信道和【时间】潜信道。  
+31.【潜信道】可以导致在实现了TLB的情况下，对BLP访问控制规则的破坏。  
+32.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，【返回】前会检查canary，如canary发生改变则停止程序执行。  
+32+.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，返回前会检查canary，如canary发生改变则【停止程序执行/或进入异常处理】。  
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
