--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -192,6 +192,11 @@
 31.【潜信道】可以导致在实现了TLB的情况下，对BLP访问控制规则的破坏。  
 32.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，【返回】前会检查canary，如canary发生改变则停止程序执行。  
 32+.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，返回前会检查canary，如canary发生改变则【停止程序执行/或进入异常处理】。  
+33.完整性包括数据完整性和【系统】完整性。  
+33+.完整性包括【数据】完整性和系统完整性。  
+34.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其先验概率，则该密码体制满足【完善保密性】。  
+34+.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其【先验概率】，则该密码体制满足完善保密性。  
+35.网络黑客篡改主页的行为，是破坏信息安全属性中的【完整】性。
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
@@ -350,7 +355,7 @@ E Send coins that never belonged to him
 30.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其先验概率，则该密码体制满足完善保密性。√  
 31.一个密码体制，x为明文，y为密文，如果给定x，y的后验概率等于其先验概率，则该密码体制满足完善保密性。×  
 32.与数据库关联较⼤的网络攻击⽅式是SQL注入;与JavaScript关联较大的攻击方式是XSS。√  
-33.通过欺骗管理理员进行信息系统攻击的⽅式称为社会工程。√  
+33.通过欺骗管理员进行信息系统攻击的⽅式称为社会工程。√  
 34.IP协议提供的是⼀一种可靠无连接的服务。×  
 35.IP协议提供的是⼀一种不可靠无连接的服务。√  
 36.篡改、重放和拒绝服务都不是被动攻击。√  
