--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -2,18 +2,18 @@
 【信息】（香农1948）任何可以减少不确定性的事物均为信息。  
 【信息系统】（GB 17859）计算机信息系统是由计算机及其相关的和配套的设备、设施(含网络)构成的，按照一定的应用目标 和规则对信息进行采集、加工、存储、传输、检索等处理的人机系统。  
 【信息资产】有价值的信息和信息系统，其价值可能是购买、维护信息系统的资金投入，或信息本身的经济价值，也可能是信息被窃取或破坏后对拥有者及其他人造成的损害，损害价值的评估既包括直接损失，也包括失去客户、投资者和名誉乃至法律责任的间接损失。  
-【威胁】能够对信息资产产生破坏或滥用的潜在外部因素。既包括人为因素，也包括自然界和物理环境的因素。其中人为因素既包括来自合法用户的也包括来自非授权用户的，既包括故意的攻击也包括无意的误操作。
+【威胁】能够对信息资产产生破坏或滥用的潜在外部因素。既包括人为因素，也包括自然界和物理环境的因素。其中人为因素既包括来自合法用户的也包括来自非授权用户的，既包括故意的攻击也包括无意的误操作。  
 【威胁主体】能够产生威胁的实体。  
 【安全机制】用来对抗威胁、避免安全事件发生的技术和方法。  
 【脆弱性】A weakness of an asset or group of assets which can be exploited by one or more threats.       
 【风险评估】  
 【风险】The potential that a given threat will exploit vulnerabilities of an asset or group of assets and thereby cause harm to the organization。  
-【定性/定量风险评估】
-【社会工程】
+【定性/定量风险评估】  
+【社会工程】  
 【主动攻击】  
 【被动攻击】  
 【机密性】信息不被未授权获取的性质。  
-【完整性】信息不被未授权更改的性质。
+【完整性】信息不被未授权更改的性质。  
 【数据完整性】  
 【系统完整性】  
 【可用性】确保系统以足够的能力、预期的方式、可接受的性能提供服务。    
@@ -44,25 +44,25 @@
 【判定问题】0，1∈Σ且φ（L)⊂{0，1},记为π=<Σ，L，φ>   
 
 【P问题】DTM多项式时间可解问题。  
-【NP问题】NTM多项式时间可解（DTM多项式时间可验证）问题  
-【NPC问题】若π∈NP，且对∀π’∈NP，都有π’∝π,则π∈NPC  
+【NP问题】NTM多项式时间可解（DTM多项式时间可验证）问题。  
+【NPC问题】若π∈NP，且对∀π’∈NP，都有π’∝π,则π∈NPC。  
 【归约】  
 【多项式变换】π1=<Σ1，L1，φ1>，π2=<Σ2，L2，φ2>之间，若存在以下变换，f:Σ1*→Σ2*的，f（L1）⊆L2，且∀I∈L1恒有φ1（I)=φ2（f（I）)。并且可用某个DTM程序在多项式时间内计算出f（I），则称π1可多项式变换为π2，记为π1∝π2。  
 【数字签名】为保护消息产生者对消息的非否认性（即不可抵赖发出消息的行为）而使用私有的密钥或算法对消息进行完整性保护（生成签名串），该完整性保护的签名串其他人无法在多项式时间产生，且通常该完整性保护可以被其他人在多项式时间进行验证。  
 【匿名性】同一主体在不同信息交换过程中所用身份的互相不可关联性。  
 【形式化方法】在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
-【区块链】把所有的交易信息（账目），组织成为一个不可篡改的链表，所形成的自带对账功能的数字记账技术。
+【区块链】把所有的交易信息（账目），组织成为一个不可篡改的链表，所形成的自带对账功能的数字记账技术。  
 【访问控制】在主体和客体及资源之间的信息流动进行安全相关的控制。信息的读写流动称之为【访问】，发起访问的主动实体称之为【主体】，被访问的实体称之为【客体】  
 【访问控制策略】  
 【强制访问控制】  
 【安全标记】  
-【潜信道/潜通道/阈下通道】
+【潜信道/潜通道/阈下通道】  
 【自主访问控制】  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
 【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。  
 【模糊测试】通过向程序输入非预期的数据，并监控其输出或状态的异常，来发现程序中故障的方法。  
-【程序的正确性】
-【程序的部分正确性】
+【程序的正确性】  
+【程序的部分正确性】  
 【符号执行】程序分析的一种方法。使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 【动态符号执行】以具体的数值作为输入执行程序代码，在程序实际执行路径的基础上，用符号执行技术进行分析，提取路径的约束表达式，根据路径搜索策略（深度、广度）对约束表达式进行变形，求解变形后的表达式并生成新的测试用例，不断迭代上面的过程，直到完成遍历程序的所有执行路径。  
 
@@ -152,7 +152,8 @@
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
 2.INTEL通过控制寄存器【 CR0    】提供保护模式。  
 3.操作系统的保护模式同实模式的根本区别是【进程内存受保护与否】。  
-4.kerckhoffs原则是【  密码算法的安全性应基于密钥的安全性，而不是基于算法的细节的安全性  】。  
+4.kerckhoffs原则是【  密码算法的安全性应基于密钥的保密，而不是基于算法的细节的保密  】。 
+4+. kerckhoffs原则是：密码算法的安全性应基于【密钥】的保密，而不是基于算法的细节的保密。  
 5.用（P,C,K,E,D）表示密码系统的三个空间和加解密算法，那么：  
 > ∀k∈K，∃【（ek∈E，dk∈D）】∀x∈P【（dk（ek（x））=x）】  
 
