--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -491,6 +491,15 @@ int main() {
 }  
 
 9.解释以下栈计算机指令的完成的功能。………………  
+指令集：load  store  pop dup add sub mul div rem neg shl shr and or xor inc ...
+ load x
+ load y
+ load z
+ mul
+ add
+ load u
+ add
+
 10.分析以下代码，回答如何逆向得到input中的数据，不要求写出代码，写出完整思路即可。  
 
 ```c  
