--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -86,10 +86,16 @@
 2）没有正确的密钥，不能由给定的密文恢复明文；对于完善加密算法，也不能从给定的明文构造出正确的密文；  
 3）不能求出私有部分，如私钥；  
 4）不能控制计算环境中的私有区域。  
-
-8.chmod u+s filename之后，filename文件的权限属性发生了什么变化？答：  
-9.简述ruid和euid的区别。答：  
-10.setuid位有什么用处？答：  
+        
+8.chmod u+s filename之后，filename文件的权限属性发生了什么变化？    
+答：为filename文件加上setuid标志，使(一般只拥有调用该文件的用户具有的权限的)filename文件在执行阶段具有文件所有者的权限。           
+9.简述ruid和euid的区别。  
+答：ruid(real user ID)表示实际用户ID，永久不会变：当一个用户登录系统之后，该shell的ruid就是该用户了，     
+从该根shell产生的所有进程都会继承ruid，即该用户；        
+euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对系统资源的访问权限，通常情况下等于ruid；      
+若某可执行文件设置了suid位，当其被非owner用户执行时，该进程的euid是文件的owner(创建了该文件且设置了suid位)，ruid是执行者(登录执行者)。         
+10.setuid位有什么用处？      
+答：对于一个可执行文件，在执行时，一般该文件只拥有调用该文件的用户具有的权限，而设置setuid位可使文件在执行阶段具有文件所有者的权限。           
 11.简述访问监测器（Reference Monitor）的NEAT原则。答：  
 12.【必考，3分】给出一段关于CPU漏洞的描述，说明这段描述有什么错误。答：  
 13.完善保密性有什么特点决定其不具有实用性？证明该特点。  
@@ -597,8 +603,11 @@ A.CBC    B.EBC    C.CFB     D.OFB
      
        
 ### 第二次课堂报告各小组提供的小题(编号代表提供的小组序号)      
-【01】rabin OT哪一年提出的？     
-    
+【01】rabin OT哪一年提出的？   
+       
+【03】Asmuth 和 Bloom 提出的门限秘密共享方案是基于一下哪一种定理?    
+A. Chinese remainder theorem   B. the pythagoras theorem   C. Bayes' theorem   D. Infinite monkey theorem   
+      
 【05】对格以及格密码的描述中，错误的是（D）    
 A.格是高维空间中的点集。    
 B.格可以有多个格基。    
@@ -677,7 +686,7 @@ f(x)=[65(x-3)(x-5)+36(x-2)(x-5)+96(x-2)(x-3)]mod19
      
 ### Others(课上同学介绍)    
        
-(1).question:在没有栈保护的情况下，下面代码有什么漏洞，漏洞点在哪里，如何触发？   
+(1).Question:在没有栈保护的情况下，下面代码有什么漏洞，漏洞点在哪里，如何触发？         
 #include "stdio.h"    
 int main(int argc, char const *argv[])    
 {    
@@ -686,8 +695,9 @@ int main(int argc, char const *argv[])
     gets(str);
     printf("%s\n", str);
     return 0;    
-}     
-    
+}       
+Answer:栈溢出；漏洞点：gets()函数；触发：输入超过10个字符长度的字符串(如输入100个字符)会导致程序崩溃。    
+        
 (2)缓冲区溢出(读如下程序)：    
 #include <stdio.h>    
 int foo(const char* input)    
