--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -605,7 +605,7 @@ A.CBC    B.EBC    C.CFB     D.OFB
 ### 第二次课堂报告各小组提供的小题(编号代表提供的小组序号)      
 【01】rabin OT哪一年提出的？   
        
-【03】Asmuth 和 Bloom 提出的门限秘密共享方案是基于一下哪一种定理?    
+【03】Asmuth 和 Bloom 提出的门限秘密共享方案是基于一下哪一种定理? (A)   
 A. Chinese remainder theorem   B. the pythagoras theorem   C. Bayes' theorem   D. Infinite monkey theorem   
       
 【05】对格以及格密码的描述中，错误的是（D）    
