--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -422,7 +422,7 @@ E Send coins that never belonged to him
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
-2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
+2. 已知一个监测器，能发出8种不同的信号（从x1到x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种二进制编码方式，使得在通信时，信号码长的数学期望值低于2.6比特。  
 3.RSA算法中，公钥为7，私钥为23，n=187。假设消息M=87，请给出使用公钥加密的计算过程：C=（     ）。假设收到的密文为11，请给出使用私钥解密的计算过程：P=（      ）。
 
 
@@ -497,14 +497,17 @@ int main() {
 }  
 
 9.解释以下栈计算机指令的完成的功能。………………  
-指令集：load  store  pop dup add sub mul div rem neg shl shr and or xor inc ...
- load x
- load y
- load z
- mul
- add
- load u
- add
+指令集：load：将变量放置于栈顶  store：将栈顶值存于变量  pop dup  
+add：将栈顶2元素相加，和放入栈顶 sub mul div rem neg shl shr and or xor inc ...  
+（指令含义参照java字节码的含义）   
+ load x  
+ load y  
+ load z  
+ mul  
+ add  
+ load u  
+ add  
+ store m  
 
 10.分析以下代码，回答如何逆向得到input中的数据，不要求写出代码，写出完整思路即可。  
 
@@ -533,7 +536,7 @@ signed __int64 check()
 要点：随机数生成，逆向的顺序，异或。  
 
 #### 证明  
-1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
+1.通过归约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
 
 #### 设计  
 1.设计一段栈计算机指令，完成以下任务：y=x\*x+(a-b)  
