--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -433,7 +433,27 @@ E Send coins that never belonged to him
 >   K1(1/2)      1           2  
 >   K2(1/4)      2           3  
 >   K3(1/4)      3           4  
-2. 给一段不安全的C代码，指出问题，并予以修改。  
+         
+【分析】：           
+Pr[1] = 1/4 * 1/2=1/8        
+Pr[2] = 3/4 * 1/2 + 1/4 * 1/4 = 7/16     
+Pr[3] = 1/4 * 3/4 + 1/4 * 1/4 = 1/4     
+Pr[4] = 1/4 * 3/4 = 3/16      
+         
+Pr[a|1] = 1 		Pr[b|1] = 0      
+Pr[a|2] = 1/7 		Pr[b|2] = 6/7       
+Pr[a|3] = 1/4		Pr[b|3] = 3/4      
+Pr[a|4] = 0		Pr[b|4] = 1        
+       
+只有c = 3时，Pr[x|3] = Pr[x]，满足完善保密性，其他不满足，所以不满足完善保密性.           
+            
+(ps：log底数均为2)         
+H(P) = -1/4log(1/4) - 3/4log(3/4) = 2 - 3/4log(3) ≈ 0.81           
+H(K) = -1/2log(1/2) - 1/4log(1/4) - 1/4log(1/4) = 1.5             
+H(C) = -1/8log(1/8) - 7/16log(7/16) - 1/4 log(1/4) - 3/16 log(3/16) ≈ 1.85                   
+          
+          
+2. 给一段不安全的C代码，指出问题，并予以修改。          
 >△1  void main() {  
 char buf[1024];  
 gets(buf);  
