--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -629,8 +629,14 @@ A.CBC    B.EBC    C.CFB     D.OFB
 【01】rabin OT哪一年提出的？   
        
 【03】Asmuth 和 Bloom 提出的门限秘密共享方案是基于一下哪一种定理? (A)   
-A. Chinese remainder theorem   B. the pythagoras theorem   C. Bayes' theorem   D. Infinite monkey theorem   
-      
+A. Chinese remainder theorem   B. the pythagoras theorem   C. Bayes' theorem   D. Infinite monkey theorem      
+     
+【4】下面说法错误的是（C）      
+A.生成式对抗网络（GAN）是一种深度学习模型。      
+B.生成模型G和判别模型D构成了一个动态的“博弈过程”。       
+C.在最理想的状态下，最后博弈的结果是G可以生成足以“以假乱真”的图片G(z)，D(G(z)) = 1。       
+D.GAN的应用有人脸变老、图像转换等。       
+         
 【05】对格以及格密码的描述中，错误的是（D）    
 A.格是高维空间中的点集。    
 B.格可以有多个格基。    
