补充部分答案

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -9,9 +9,9 @@
 【风险评估】  
 【风险】The potential that a given threat will exploit vulnerabilities of an asset or group of assets and thereby cause harm to the organization。  
 【定性/定量风险评估】  
-【社会工程】  
-【主动攻击】  
-【被动攻击】  
+【社会工程】是通过欺骗，使他⼈泄露安全相关的敏感信息，或者按照欺骗者意图进⾏某些安全相关的操作。  
+【主动攻击】对完整性和可⽤性的破坏。  
+【被动攻击】对机密性的破坏。  
 【机密性】信息不被未授权获取的性质。  
 【完整性】信息不被未授权更改的性质。  
 【数据完整性】  
@@ -30,15 +30,15 @@
 【信息熵】  
 【无条件安全性】  
 【计算安全性】  
-【密码学】  
-【明文】  
-【密文】  
-【加密算法】  
-【可证明安全】  
+【密码学】研究秘密通信为目的 包括：密码编码学、密码分析学。  
+【明文】需要加密的消息。  
+【密文】被加密后的消息。  
+【加密算法】用于加密的数学函数。  
+【可证明安全】由Goldwasser和Micali最先提出的方法，将密码系统的安全性归结（归约）为某个公认为求解困难的数学难题（如大整数素因子分解、计算离散对数等），或没有有效解法的问题（如NPC、NP-Hard问题等），实际上并没有证明算法是安全的，而是证明某个没有有效解法的问题不难于该密码系统的破解问题，即如果该密码系统被破解，则相对应的难题将找到有效解法。  
 【非多项式有界量】函数f(n):N→R称为关于n的任意多项式无界的，IF对任意多项式p(n),存在一个自然数n0，使得对于任意n＞n0，都有f(n)＞p(n)。  
 【可忽略量】函数ℇ(n):N→R称为关于n的一个可忽略量（ℇ(n)可忽略），IF其倒数1/ℇ(n)是关于n的一个非多项式有界的量。  
 【压倒性概率】如果ℇ(n)是一个可忽略量，那么1-ℇ(n)就是一个压倒性的量/概率。  
-【计算不可区分】  
+【计算不可区分】two families of distributions are 【computationally indistinguishable】 if no efficient algorithm can tell the difference between them except with small probability.  
 【问题】问题为<Σ，L，φ>，其中，Σ：问题所用的符号集合。Σ*：Σ中有限串集合。其中L⊆Σ*：问题的所有实例集合。φ：L→Σ*。  
 
 【判定问题】0，1∈Σ且φ（L)⊂{0，1},记为π=<Σ，L，φ>   
@@ -46,7 +46,7 @@
 【P问题】DTM多项式时间可解问题。  
 【NP问题】NTM多项式时间可解（DTM多项式时间可验证）问题。  
 【NPC问题】若π∈NP，且对∀π’∈NP，都有π’∝π,则π∈NPC。  
-【归约】  
+【归约】将某个计算问题(https://zh.wikipedia.org/w/index.php?title=%E8%A8%88%E7%AE%97%E5%95%8F%E9%A1%8C&action=edit&redlink=1)转换为另一个问题的过程。  
 【多项式变换】π1=<Σ1，L1，φ1>，π2=<Σ2，L2，φ2>之间，若存在以下变换，f:Σ1*→Σ2*的，f（L1）⊆L2，且∀I∈L1恒有φ1（I)=φ2（f（I）)。并且可用某个DTM程序在多项式时间内计算出f（I），则称π1可多项式变换为π2，记为π1∝π2。  
 【数字签名】为保护消息产生者对消息的非否认性（即不可抵赖发出消息的行为）而使用私有的密钥或算法对消息进行完整性保护（生成签名串），该完整性保护的签名串其他人无法在多项式时间产生，且通常该完整性保护可以被其他人在多项式时间进行验证。  
 【匿名性】同一主体在不同信息交换过程中所用身份的互相不可关联性。  
@@ -54,18 +54,18 @@
 【区块链】把所有的交易信息（账目），组织成为一个不可篡改的链表，所形成的自带对账功能的数字记账技术。  
 【访问控制】在主体和客体及资源之间的信息流动进行安全相关的控制。信息的读写流动称之为【访问】，发起访问的主动实体称之为【主体】，被访问的实体称之为【客体】  
 【访问控制策略】  
-【强制访问控制】  
+【强制访问控制策略】  
 【安全标记】  
-【潜信道/潜通道/阈下通道】  
-【自主访问控制】  
+【隐蔽信道/潜信道/潜通道=Covert Channel】隐蔽信道的概念是由Lampson最先提出，指不是被设计或本意不是用来传输信息的通信信道。在后续研究（强制访问控制策略）中，隐蔽信道主要用来指用来突破系统访问控制策略的不进行数据交换的通信信道，包括存储隐蔽信道和时间隐蔽信道。而Lampson定义中的合法的隐蔽信道被称之为阈下信道（subliminal channel），主要用于信息隐藏。在操作系统中隐蔽信道则具体定义为，进程以违反操作系统安全策略的方式传送信息的通信信道。在强制访问控制的机密性模型中隐蔽信道是一项严重威胁，因此安全操作系统标准TCSEC要求B2级系统要进行彻底的存储隐蔽信道分析，而B3级系统要同时进行时间隐蔽信道分析。但目前尚没有完全消除隐蔽信道的有效方法。  
+【自主访问控制策略】  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
 【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。  
 【模糊测试】通过向程序输入非预期的数据，并监控其输出或状态的异常，来发现程序中故障的方法。  
-【程序的正确性】  
-【程序的部分正确性】  
+【程序的部分正确性】对于程序S，前断言P指明程序执行前，程序变量应有的性质（程序正确执行的前提），后断言Q刻画了程序结束时的程序状态空间（程序所应实现任务的描述）。如果P满足，且S执行终止，则终止时Q成立，那么称程序S是部分正确的。  
+【程序的终止性】对于程序S，如果前断言P成立，则程序必终止，则称程序S是终止的。  
+【程序的完全正确性】如果程序是部分正确的，且是终止的，则程序是完全正确的。  
 【符号执行】程序分析的一种方法。使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 【动态符号执行】以具体的数值作为输入执行程序代码，在程序实际执行路径的基础上，用符号执行技术进行分析，提取路径的约束表达式，根据路径搜索策略（深度、广度）对约束表达式进行变形，求解变形后的表达式并生成新的测试用例，不断迭代上面的过程，直到完成遍历程序的所有执行路径。  
-
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
 #### 简答  
@@ -74,7 +74,7 @@
 3.信息系统的安全管理体系由哪些部分组成？答：主要包括信息安全行政管理和信息安全技术管理两部分，前者包括信息安全策略及管理制度、信息安全机构及人员，后者包括信息系统安全建设和信息系统安全运维。  
 4.简述GDPR.答：GDPR=General Data Protection Regulation，即欧盟法规《通用数据保护条例》。法规是对关于个人数据保护和隐私保护的规范，适用于在欧洲开展业务的所有企业，要求这些企业处理个人数据的业务流程必须符合其对个人隐私和个人数据安全性保护的规定。法案于2018年5月开始强制实施，违反此规定的企业将面临公司全球收益4%或两千万欧元（取高者）的罚款。此法案对个人数据及个人隐私的保护起到了积极作用。  
 5.简述STRIDE威胁建模。答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure  
-6.简述PDCA.答：  
+6.简述PDCA.答：通过规划（Plan）、执行（Do）、查核（Check）、行动（Act）四阶段，确保每次的目标都能达成。PDCA循环就是按照这样的顺序进行质量管理，并且循环不止地进行下去的科学程序。  
 7.Dolev-Yao威胁模型中，认为敌手能够做什么，不能够做什么？答：  
 >敌手可以：  
 1）能获得经过网络的任何消息；  
@@ -554,6 +554,7 @@ signed __int64 check()
 }  
 ```  
 要点：随机数生成，逆向的顺序，异或。  
+先用种子srand(0xDEADBEEF)生成64个随机数，前32位是unsigned char类型，后32位是int类型，我们通过IDA得到marg_num的值，先和后32位的随机数异或，如marg_num[i]xor Rand[32+i],再减去Rand[i]%64则得到了input[i].  
 
 #### 证明  
 1.通过归约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
@@ -749,6 +750,7 @@ int main()
   }
       
 假设以上代码将在32位的机器上编译运行，foo函数的栈结构如下：      
+
 ---------     
 | ... |     
 ---------      
