--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -53,11 +53,11 @@
 【形式化方法】在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
 【区块链】把所有的交易信息（账目），组织成为一个不可篡改的链表，所形成的自带对账功能的数字记账技术。  
 【访问控制】在主体和客体及资源之间的信息流动进行安全相关的控制。信息的读写流动称之为【访问】，发起访问的主动实体称之为【主体】，被访问的实体称之为【客体】  
-【访问控制策略】  
-【强制访问控制策略】  
-【安全标记】  
+【访问控制策略】Access control policies are high-level requirements that specify how access is managed and who may access information under what circumstances. For instance, policies may pertain to resource usage within or across organizational units or may be based on need-to-know, competence, authority, obligation, or conflict-of-interest factors. At a high level, access control policies are enforced through a mechanism that translates a user’s access request, often in terms of a structure that a system provides.(来自NIST的Access Control Policy and Implementation Guides)  
+【强制访问控制策略】TCSEC最早给出了保护机密性的强制访问控制策略：以包含在客体中的信息敏感性和访问这些敏感性信息的主体的正式授权信息为基础，对访问进行限制的策略。如果推广到包括机密性的所有安全属性，那么强制访问控制策略可以定义为：系统通过某种预定的不受用户改变的规则对访问进行管理的策略。   
+【安全标记】在客体上的一组可用于支持强制访问控制策略的安全属性信息项。  
 【隐蔽信道/潜信道/潜通道=Covert Channel】隐蔽信道的概念是由Lampson最先提出，指不是被设计或本意不是用来传输信息的通信信道。在后续研究（强制访问控制策略）中，隐蔽信道主要用来指用来突破系统访问控制策略的不进行数据交换的通信信道，包括存储隐蔽信道和时间隐蔽信道。而Lampson定义中的合法的隐蔽信道被称之为阈下信道（subliminal channel），主要用于信息隐藏。在操作系统中隐蔽信道则具体定义为，进程以违反操作系统安全策略的方式传送信息的通信信道。在强制访问控制的机密性模型中隐蔽信道是一项严重威胁，因此安全操作系统标准TCSEC要求B2级系统要进行彻底的存储隐蔽信道分析，而B3级系统要同时进行时间隐蔽信道分析。但目前尚没有完全消除隐蔽信道的有效方法。  
-【自主访问控制策略】  
+【自主访问控制策略】在TCSEC中，自主访问控制策略（DAC）被定义为，根据主体（如用户、进程或 I/O 设备等）的身份和他所属的组限制对客体的访问。所谓的自主，是因为拥有访问权限的主体，可以直接（或间接）地将访问权限赋予其他主体（除非受到强制访问控制的限制）。  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
 【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。  
 【模糊测试】通过向程序输入非预期的数据，并监控其输出或状态的异常，来发现程序中故障的方法。  
@@ -96,7 +96,12 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 若某可执行文件设置了suid位，当其被非owner用户执行时，该进程的euid是文件的owner(创建了该文件且设置了suid位)，ruid是执行者(登录执行者)。         
 10.setuid位有什么用处？      
 答：对于一个可执行文件，在执行时，一般该文件只拥有调用该文件的用户具有的权限，而设置setuid位可使文件在执行阶段具有文件所有者的权限。           
-11.简述访问监测器（Reference Monitor）的NEAT原则。答：  
+11.简述访问监测器（Reference Monitor）的NEAT原则。答：
+ (以下为要点，需展开)  
+ Non-bypassable  
+ Evaluable  
+ always invoked  
+ Tamper-proof  
 12.【必考，3分】给出一段关于CPU漏洞的描述，说明这段描述有什么错误。答：  
 13.完善保密性有什么特点决定其不具有实用性？证明该特点。  
 >答：如Pr[x0]=0,则∀y，Pr[x0|y]=Pr[x0]=0,x0可去除。同理Pr[y0]=0可去除  
@@ -117,7 +122,13 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 16.简述BTC中的PoW机制和它的用处。
 >答：BTC产生一个区块即记账时，记账者须通过调整区块中的nonce值，使得该区块的Hash值的前n位都是0。其计算次数平均为2的n次方。记账者通过这种方式来争夺记账权。由于包含虚假记录的区块会被其他记账者舍弃，而产生区块又要消耗大量的成本，导致记账者更愿意诚实地产生区块。
 
-17.给出一张图，标出Linux操作系统中的Stack和Heap的位置。答：  
+17.给出一张图，标出Linux操作系统中的Stack和Heap的位置。  
+图略  
+画图注意事项：  
+1.生长方向：栈向低地址扩展(即”向下生长”)，是连续的内存区域；堆向高地址扩展(即”向上生长”)，是不连续的内存区域。这是由于系统用链表来存储空闲内存地址，自然不连续，而链表从低地址向高地址遍历。  
+2.起始地址。  
+3.体现ASLR。  
+4.注意32位系统和64位系统的区别。  
 18.如何防范缓冲区溢出？  
 >答：1.使用安全形式的printf(); 不使用printf(buffer)  
 2.Review loop bounds for off-by-one errors  
@@ -131,19 +142,37 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 
 20.简述防范栈溢出DEP机制和ASLR机制。  
 
-21.简述前后断言法。
+21.简述前后断言法。  
+【断言（assertion）】：在程序语句间插入刻画程序状态（即程序变量的取值）的一阶谓词公式，称为断言。  
+前后断言法：前断言P指明程序执行前，程序变量应有的性质（程序正确执行的前提）。后断言Q刻画了程序结束时的程序状态空间（程序所应实现任务的描述）。一对前后断言{P，Q}也称为程序S的规约（specification）。  
 
-22.简述污点追踪。
+部分正确性的证明方法：  
+前断言逐步向后断言推导；  
+循环：找一个断言，在执行循环时成立，在退出循环时仍成立（不变式）  
+终止性的证明方法：  
+1）选取一个断点集合，裁断程序的各个循环部分，每个断点i处定义一个断言qi（x,y）  
+2）选取一个良序集< W, ≤ >，在每个i处定义一个终止表达式Ei（x,y）  
+3）证明所选取的断言都是【良断言】。即对于每一条从程序入口到断点j的通路α，有  
+P(x)^Rα(x,y)⇒qj(x,rα(x,y))  
+而对于每一个从i到j的通路α，有  
+q(x,y)^Rα(x,y)⇒qj(x,rα(x,y))  
+其中，R表示通过通路的条件，r表示通过通路后y的变化。  
+4）证明E是【良函数】，对每个断点i，有  
+q(x,y)⇒E(x,y)∈W  
+5）证明终止条件成立。即对于每条从i到j，且是循环一部分的通路α，有  
+q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]  
 
-23.简述符号执行。
+22.简述污点追踪。  
 
-24.简单介绍K近邻算法的思想和方法。
+23.简述符号执行。  
 
-25.简单介绍决策树的思想和方法。
+24.简单介绍K近邻算法的思想和方法。  
+
+25.简单介绍决策树的思想和方法。  
 
 26.简单介绍朴素贝叶斯的思想和方法。
 
-27.简单介绍支持向量机的思想和方法。
+27.简单介绍支持向量机的思想和方法。  
 
 28.简单介绍神经网络、DNN及卷积神经网络。  
 
