--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -6,16 +6,16 @@
 【威胁主体】能够产生威胁的实体。  
 【安全机制】用来对抗威胁、避免安全事件发生的技术和方法。  
 【脆弱性】A weakness of an asset or group of assets which can be exploited by one or more threats.       
-【风险评估】  
+【风险评估/信息安全风险评估】风险管理国际标准ISO31000给出的定义：风险评估是风险识别、风险分析及风险评价的全过程。由此可见，信息安全风险评估是信息安全风险的识别、分析及评价的全过程。  
 【风险】The potential that a given threat will exploit vulnerabilities of an asset or group of assets and thereby cause harm to the organization。  
-【定性/定量风险评估】  
+【定性/定量风险评估】定性/定量风险评估是指在风险评估的风险分析阶段分别使用了定性的影响分析方法和定量的影响分析方法。其中，定量方法对风险分析过程中的所有要素进行定量赋值，通过等式得出系统的整体和残余风险。定性方法则不进行量化计算，而是通过主观性地分析、评价，给出等级化的风险分析结果。    
 【社会工程】是通过欺骗，使他⼈泄露安全相关的敏感信息，或者按照欺骗者意图进⾏某些安全相关的操作。  
 【主动攻击】对完整性和可⽤性的破坏。  
 【被动攻击】对机密性的破坏。  
 【机密性】信息不被未授权获取的性质。  
 【完整性】信息不被未授权更改的性质。  
-【数据完整性】  
-【系统完整性】  
+【数据完整性】数据不被未授权更改的性质。  
+【系统完整性】系统的行为（如控制流）不受未授权更改的性质。  
 【可用性】确保系统以足够的能力、预期的方式、可接受的性能提供服务。    
 【拒绝服务攻击】是指攻击者通过某种手段，有意地造成计算机或网络不能正常运转从而不能向合法用户提供所需要的服务或者降低其提供的服务质量。  
 【真实性】  
@@ -24,12 +24,12 @@
 【accountability（可追溯性）】  
 【审计】  
 【攻击面】  
-【攻击树】  
+【攻击树】用树型结构来描述系统所面临的安全威胁和系统可能受到的多种攻击，其中根节点代表被攻击的目标，叶节点表示达成攻击目标的方法。  
 【Bayes定理】  
-【完善保密性】  
-【信息熵】  
-【无条件安全性】  
-【计算安全性】  
+【完善保密性】对于任意密文 y 和明文 x，都有 Pr[x | y] = Pr[x]。即，不能通过分析密文获得明文的任何信息。  
+【信息熵】香农提出的用来量化信息的一种度量方式，用信源的不确定度来描述信源的信息含量。  
+【无条件安全性】假定攻击者拥有无限的计算资源，但仍然无法破译该密码系统，则称该密码系统是无条件安全的。  
+【计算安全性】使用目前最好的方法攻破密码系统所需要的计算量远远超出攻击者的计算资源水平，则这个密码体系为计算安全的。计算安全性具有时效性。     
 【密码学】研究秘密通信为目的 包括：密码编码学、密码分析学。  
 【明文】需要加密的消息。  
 【密文】被加密后的消息。  
