--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -18,12 +18,12 @@
 【系统完整性】系统的行为（如控制流）不受未授权更改的性质。  
 【可用性】确保系统以足够的能力、预期的方式、可接受的性能提供服务。    
 【拒绝服务攻击】是指攻击者通过某种手段，有意地造成计算机或网络不能正常运转从而不能向合法用户提供所需要的服务或者降低其提供的服务质量。  
-【真实性】  
+【真实性】真实性即某主体的身份与其声称的身份相一致的特性。真实性通常通过身份鉴别的手段，即验证用户提交的某种与其声明的身份相绑定的信息的完整性来获得。但真实性与信源完整性有显著的区别：其一，真实性需要鲜活性，即重放的信息是无效的，这点区别于信源完整性；其二，某些具有信源完整性的消息是主体匿名的，这点又不符合真实性的要求。  
 【认证/身份鉴别】通过用户提交的附加信息，对主体身份进行证实的过程。  
 【非否认服务】防止参与某次通信交换的一方事后否认本次交换曾经发生过的服务称为非否认服务。  
 【accountability（可追溯性）】  
-【审计】  
-【攻击面】  
+【审计】ISO/IEC 15408给出的定义：信息系统安全审计主要指对与安全有关的活动的相关信息进行识别、记录、存储和分析；审计记录的结果用于检查网络上发生了哪些与安全有关的活动，谁（哪个用户）对这个活动负责；主要功能包括：安全审计自动响应、安全审计数据生成、安全审计分析、安全审计浏览、安全审计事件选择、安全审计事件存储等。  
+【攻击面（attack surface）】The attack surface of a software environment is the sum of the different points (the "attack vectors") where an unauthorized user (the "attacker") can try to enter data to or extract data from an environment.Keeping the attack surface as small as possible is a basic security measure.（来自wiki）  
 【攻击树】用树型结构来描述系统所面临的安全威胁和系统可能受到的多种攻击，其中根节点代表被攻击的目标，叶节点表示达成攻击目标的方法。  
 【Bayes定理】  
 【完善保密性】对于任意密文 y 和明文 x，都有 Pr[x | y] = Pr[x]。即，不能通过分析密文获得明文的任何信息。  
