补充题目和答案

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -505,9 +505,33 @@ else  fprintf(stderr, "Permission denied\n");
 >例1：简单协议  
 >例2：Woo-Lam协议  
 
-6.根据以下代码，判断：假设程序执行前A、B、C的密级分别为低、中、高，根据基于BLP的信息流控制模型进行分析，程序执行完成后X、Y、Z的密级应当是什么？  
+6.根据以下代码，判断：假设程序执行前A、B、C的密级分别为低、中、高，根据基于BLP的信息流控制模型进行分析，程序执行完成后X、Y、Z的密级应当是什么？ 
+
+X=0;  
+Y=1;  
+Z=A;  
+for(i=0;i<5;i++){  
+  if(Z>B){  
+    Z=0;  
+    X=5;  
+  }  
+  else Z=5;  
+  Z++;  
+}  
+X=3;  
+Y=C+X;  
 
 7.以海大教务处选课系统、学工在线系统、医院的医疗信息系统为例，分别说明三个系统在机密性、完整性、可用性方面的保护等级的高低及原因。  
+答：  
+1.选课系统  
+机密性破坏导致的后果：学生选课信息泄露，各班选课人数泄露→攻击者可以利用这些信息帮助自己更容易选中课程……  
+完整性破坏导致的后果：修改别人的选课数据→攻击者可以是自己或他人非法选中课程，去掉掉其他人选中的课程……  
+可用性破坏导致的后果：选课系统宕机，同学们某一时刻无法选课→导致选课周期延长，影响排课效率，浪费大家时间……  
+……  
+……  
+机密性：学工在线系统≈医疗信息系统＞选课系统  
+完整性：医疗信息系统＞  
+可用性：医疗信息系统＞  
   
 8.代码demo.c经编译后，反汇编得到的汇编代码如下，请问编译器使用了什么安全机制，其原理是什么？  
 (gdb) disas main  
