--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -224,15 +224,20 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 27+.符号执行是程序分析的一种方法。它使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的【路径约束】。通过对其进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 28.匿名性是指同一主体在不同信息交换过程中所用身份的【互相不可关联性】。  
 29.任何可以减少不确定性的事物均为【信息】。  
-30.潜信道包括空间潜信道和【时间】潜信道。  
-31.【潜信道】可以导致在实现了TLB的情况下，对BLP访问控制规则的破坏。  
+30.隐蔽信道包括存储隐蔽信道和【时间】隐蔽信道。  
+31.【隐蔽信道】可以导致在实现了TLB的情况下，对BLP访问控制规则的破坏。  
 32.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，【返回】前会检查canary，如canary发生改变则停止程序执行。  
 32+.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，返回前会检查canary，如canary发生改变则【停止程序执行/或进入异常处理】。  
 33.完整性包括数据完整性和【系统】完整性。  
 33+.完整性包括【数据】完整性和系统完整性。  
 34.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其先验概率，则该密码体制满足【完善保密性】。  
 34+.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其【先验概率】，则该密码体制满足完善保密性。  
-35.网络黑客篡改主页的行为，是破坏信息安全属性中的【完整】性。
+35.网络黑客篡改主页的行为，是破坏信息安全属性中的【完整】性。  
+35+.口令爆破，是破坏信息安全属性中的【机密】性。  
+35++.分布式拒绝服务攻击，是破坏信息安全属性中的【可用】性。  
+35+++.MAC伪造，破坏的是信息安全属性中的【完整】性。  
+35++++.控制流劫持，破坏的是信息安全属性中的【（系统）完整】性。  
+35+++++.Race Condition（竞态掉件），破坏的是信息安全属性中的【（系统）完整】性。
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
@@ -423,14 +428,23 @@ E Send coins that never belonged to him
 62.NIST是欧洲进行标准研究的主要机构。×  
 63.弱口令不一定是6位以下的口令，安全的口令也可能是三、四位的口令。×  
 64.信息资产一定是具有价值的。√  
+64+.信息一定是有价值的。×  
+64++.信息的价值一定是可以量化的。×  
 65.IEEE是国际标准化组织，与IEC共同发布了若干国际信息安全类标准。×  
 66.ISO是国际标准化组织，与IEC共同发布了若干国际信息安全类标准。√  
 67.由于三重DES比DES更安全，所以可以断定DES的串联操作对于不同密钥的DES变换来说，因其不封闭，所以不能构成群。√  
 68.既然三重DES比DES更安全，所以可以断定DES的串联操作对于不同密钥的DES变换来说，因其封闭，所以可构成半群。×  
 69.数字签名技术不能提供报文鉴别服务。×  
+69+.数字签名技术可以提供认证服务。√  
 70.NAT技术工作在数据链路层。×  
-71.身份鉴别机制分为3种机制，口令属于know something的鉴别方式。√  
+71.身份鉴别机制分为3类机制，口令属于know something的鉴别方式。√  
+71+.身份鉴别分为3类机制，银行卡属于have something的鉴别方式。√  
+71++.身份鉴别分为3类机制，指纹属于be something的鉴别方式。√  
+71+++.同时使用了两种机制的身份认证称为双因子认证。×  
+71++++.同时使用了两种以上不同类型的身份认证方式称为双因子认证。√  
 72.包过滤防火墙工作在网络的数据链路层。×  
+72+.包过滤防火墙工作在网络层。√  
+72++.应用代理防火墙工作在网络层。×  
 73*.VPN可以工作在数据链路层，也可以工作在网络层。√  
 74.数字签名具有这样的特点：1）其他人无法伪造；2）发送者不能抵赖；3）接收者可以验证内容、作者及其签名的时间；4）有争议时，可由第三方进行验证。√  
 75.企业的安全问题应主要从技术角度进行解决，管理上只要差不多就行了。×  
@@ -438,16 +452,15 @@ E Send coins that never belonged to him
 77.二战中，由于德国人的严谨性，他们发送的电报的格式遵循完全相同的格式，发送时间也非常准时，这使得图灵对德军密码的破解变得极为困难。×  
 78.RSA公钥加密算法的加密密钥跟解密密钥完全没有关系，是不可能相互推导出来的。×  
 79*.企业的安全问题应当由技术部门和一线员工发起，自下而上地逐步反映到管理层。×  
+79+.正确的安全管理方式应该是自上而下的，而非自下而上的。√  
 80.社会工程是指为非法获得信息采取的技术手段。×  
 81.信息系统并不是越安全就越好。√  
 82.模糊测试属于白盒测试。×  
+82+.形式化证明属于黑盒测试。×  
+82++.源代码审计属于白盒测试。√  
 83.如程序是部分正确且是终止的，则其为正确的。√  
 84.在随机数种子是一致的情况下，window和linux生成的随机数是相同的。 X   
 85.我们可以利用wireshark完成对ICMP数据包的监听。√  
-
-
-
-
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
